--- a/week2/ex1.html
+++ b/week2/ex1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -16,27 +17,21 @@
     </style>
 </head>
 <body>
-    <header>
-        <h1>Wellcome to my web</h1>
-        <nav>
-            <a href="#home">Home</a>
-        </nav>
-    </header>
     <main>
         <h1>Hello, My name is Ching Norin</h1>
         <p>I am a student in kpp high school and now i study at CADT.</p>
-        <ul>
-            <ul>my habbies : </ul>
+        <ul class="body1">
+            <ul id="id1">my habbies : </ul>
             <li>I like playing game</li>
             <li>I like playing football</li>
             <li>I like music</li>
             <li>Study</li>
         </ul>
-        <ul>Image Sunset</ul>
+        <ul id="id2">Image Sunset</ul>
         <img src="sunset.jpg" alt="Sunset.">
         <a href="https://search.brave.com/images?q=sunset">Go to Google</a>
         <h2>contect me</h2>
-        <form>
+        <form class="form">
             <label for="name">Name:</label><br>
             <input type="text" id="name" name="name"><br><br>
 
